<resources>
    <string name="app_name">healthdoctor</string>
    <string name="action_settings">Settings</string>

    <string name="login_title">优健管</string>
    <string name="login_mobile">请输入手机号</string>
    <string name="login_account">请输入账号</string>
    <string name="login_code">请输入手机验证码</string>
    <string name="login_get_code">发送验证码</string>
    <string name="login_submit">登 录</string>

    <string name="group_serverCount">服务人数</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_loadmore">下拉加载</string>

    <string name="customList_search_fail">抱歉，没有找到此人</string>
    <!--<string name="connect_fail">轻触屏幕重新连接</string>-->

    <!--语音听写APP_ID-->
    <string name="app_id">57ac1f0a</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <string name="usefulmessage_default_lastconsult">未获取客户咨询记录</string>
    <string name="usefulmessage_laseconsult_title">咨询内容</string>
    <string name="usefulmessage_btn_nextstep">下一步</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
